OA doc - add auth by token
